<resources>
    <string name="app_name">SocialPlaces</string>
    <string name="title_activity_maps">SocialPlaces</string>
    <string-array name="planets_array">
        <item>Restaurants</item>
        <item>Sport</item>
        <item>Leisure</item>
        <item>Live event</item>
    </string-array>

    <string name="recommendation_check_yes">Yes</string>
    <string name="recommendation_check_restaurants">Restaurants</string>
    <string name="recommendation_check_leisure">Leisure</string>
    <string name="recommendation_check_sport">Sport</string>

    <string name="name">Name:</string>
    <string name="address">Address</string>
    <string name="login">Login</string>
    <string name="share">Share</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Insert e-mail</string>
    <string name="enter_name">Enter name</string>
    <string name="pubblico">Public</string>
    <string name="travelling">Travelling</string>
    <string name="privato">Private</string>
<!--    <string name="custom_btn">Add point of interest</string>-->
    <string name="nome">Name</string>
    <string name="tipo">Visibility</string>
    <string name="gender">Gender</string>
    <string name="reading">Reading</string>
    <string name="sports">Sports</string>
    <string name="dialog_friend_poi_header">%1$s (%2$s)</string>
    <string name="dialog_live_event_details">%1$s (live)</string>
    <string name="dialog_poi_details">%1$s (%2$s)</string>
    <string name="header">Create Point of Interest</string>
    <string name="spinner_name">Type</string>
    <string name="live_duration">Ending in (at most 24 hours)</string>
    <string name="info">Info</string>
    <string name="help">Help</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name not available</string>
    <string name="nav_header_subtitle">Email not available</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="logout">Logout</string>
    <string name="list">Points of Interest</string>
    <string name="x">X</string>
    <string name="back">Back</string>
    <string name="button">Button</string>
    <string name="other_functionality">Other functionality?</string>
    <string name="create_poi_or_live">Create</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="nosrc">No points of interest are registered!</string>
    <string name="no_poi_selected">No point of interest selected</string>
    <string name="nofriend">You have no friends yet!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be longer than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">     Login</string>
    <string name="route">Take me there</string>
    <string name="elimina">   Delete</string>
    <string name="splash">splash</string>
    <string name="title">Social Places</string>
    <string name="phone">Phone number</string>
    <string name="ending_on">Ending on:</string>
    <string name="notsetphone">No phone number</string>
    <string name="website">Website</string>
    <string name="owner">Owner:</string>
    <string name="noteseturi">No website</string>
    <string name="cancel">Cancel</string>
    <string name="removed_poi">Point of interest removed</string>
    <string name="removed_friend">Friend removed</string>
    <string name="canceled_removal">Canceled removal</string>
    <string name="friend_pois">Friend\'s points of interest</string>
    <string name="friends">Friends</string>
    <string name="addfriend">Add friend</string>
    <string name="addFriend">Accept</string>
    <string name="delete">Refuse</string>
    <string name="friendheader">New friend request</string>
    <string name="remove_friend">Remove friend</string>
    <string name="selected_friend_poi">Point of interest:</string>
    <string name="car">Auto</string>
    <string name="live">Live</string>
    <string name="remind">Postpone</string>
    <string name="timer">Timer:</string>
    <string name="nolive">No live events are registered!</string>
    <string name="location_permission_required">This app requires location services to be enabled to work properly.</string>
    <string name="activity_permission_required">This app requires activity recognition to be enabled to work properly.</string>
    <string name="background_location_permission_required">This app requires background location services to be enabled to work properly.</string>
    <string name="add_to_user_pois">Add to mine</string>
    <string name="no_address">Address not found</string>
    <string name="location_service">Location service</string>
    <string name="location_service_started">Location service started</string>
    <string name="location_service_stopped">Location service stopped</string>
    <string name="location_service_description">Maptry Location Service for accessing the device location in real time.</string>
    <string name="location_permission_denied">Permission to use location services denied. Closing the app…</string>
    <string name="app_logo_description">App logo</string>
    <string name="empty_username">You must type the e-mail of the user you want to send the friendship request to.</string>
    <string name="no_request_to_oneself">You cannot send a user request to the same user you\'re logged in.</string>
    <string name="friend_request_sent">Friend request sent.</string>
    <string name="friend_removal_confirmed">Friend removed successfully.</string>
    <string name="share_place">Hey! I think you would be interested in visiting %1$s in %2$s\nhttps://maps.google.com/?q=%3$f,%4$f</string>
    <string name="share_place_intent">You\'re sharing %1$s.</string>
    <string name="loading_friends">Loading your friends list.</string>
    <string name="date_format">%1$d %2$s %3$d %4$d:%5$d</string>
    <string name="refresh_list_btn">Refreshes the current list.</string>
    <string name="denyFriend">Deny</string>
    <string name="human_activity_permission_denied">Permission to use human activity recognition denied. Closing the app…</string>
    <string name="access_background_location_permission_denied">Permission to use background location denied. Closing the app…</string>
    <string name="login_is_required">You must login in order to use SocialPlaces! Closing the app…</string>
    <string name="default_notification_channel_id">it.unibo.socialplaces.pushnotification</string>
    <string name="recommendation_check_label">Does the recommendation suit your needs? If no, please select a better category.</string>
</resources>
