<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/poi_linear_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/poi_name_header"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:ellipsize="end"
                android:textColor="#000000"
                android:textSize="17sp"
                android:maxLines="3"
                tools:text="@string/dialog_poi_details"
                android:textAlignment="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAllCaps="false"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/bottom_border">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/poi_address"
                    android:textColor="#000000"
                    android:text="@string/address"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:id="@+id/show_poi_address"
                    android:layout_toEndOf="@+id/poi_address"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/phone_relative_layout"
                android:background="@drawable/bottom_border">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/phone"
                    android:id="@+id/phone_number"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/notsetphone"
                    android:id="@+id/show_phone_number"
                    android:layout_toEndOf="@+id/phone_number"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/website_relative_layout"
                android:padding="16dp"
                android:background="@drawable/bottom_border">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:textColor="#000000"
                    android:id="@+id/website"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noteseturi"
                    android:textColor="#000000"
                    android:id="@+id/show_website"
                    android:layout_toEndOf="@+id/website"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recommendation_check_1_layout"
                android:padding="16dp"
                android:background="@drawable/bottom_border">

                <TextView
                    android:id="@+id/recommendation_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/recommendation_check_label"
                    android:textColor="#000000" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recommendation_check_2_layout"
                android:padding="16dp"
                android:background="@drawable/bottom_border">

                <RadioGroup
                    android:id="@+id/recommendation_check_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/recommendation_check_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#2196F3"
                        android:checked="true"
                        android:text="@string/recommendation_check_yes" />

                    <RadioButton
                        android:id="@+id/recommendation_check_restaurants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#2196F3"
                        android:text="@string/recommendation_check_restaurants" />

                    <RadioButton
                        android:id="@+id/recommendation_check_leisure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#2196F3"
                        android:text="@string/recommendation_check_leisure" />

                    <RadioButton
                        android:id="@+id/recommendation_check_sport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#2196F3"
                        android:text="@string/recommendation_check_sport" />

                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/actions_relative_layout"
                android:layout_marginTop="32dp">

                <Button
                    android:id="@+id/share_poi"
                    android:layout_width="138dp"
                    android:layout_height="34dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="0dp"
                    android:background="@drawable/layout_padding"
                    android:drawableStart="@drawable/ic_share_blu"
                    android:text="@string/share" />

                <Button
                    android:id="@+id/navigate_to_poi"
                    android:layout_width="138dp"
                    android:layout_height="34dp"
                    android:layout_alignEnd="@+id/share_poi"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/layout_paddingroute"
                    android:drawableStart="@drawable/ic_route_start_svgrepo_com"
                    android:text="@string/route" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>