<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:tag="FriendsFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#FAF6F6"
    android:fitsSystemWindows="true"
    tools:context="fragment.FriendsFragment">

    <ImageView
        android:id="@+id/close_friends_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:contentDescription="@string/back"
        android:focusable="true"
        app:srcCompat="@drawable/ic_signout" />

    <ImageView
        android:id="@+id/add_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:contentDescription="@string/addfriend"
        android:focusable="true"
        app:srcCompat="@drawable/ic_addfriend" />

    <TextView
        android:id="@+id/no_friends_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nofriend"
        android:textAlignment="center"
        android:textColor="@color/colorBackground"
        android:textSize="30sp" />

    <ListView
        android:id="@+id/friends_list_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"/>

</FrameLayout>