<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/create_poi_linear_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/create_poi_header"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:ellipsize="end"
                android:textColor="#000000"
                android:textSize="17sp"
                android:text="@string/header"
                android:maxLines="3"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAllCaps="false"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/place_name_relative_layout"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nome"
                    android:id="@+id/place_name"
                    android:textColor="#000000"
                    android:labelFor="@+id/edit_place_name"
                    android:layout_centerVertical="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_place_name"
                    android:backgroundTint="#000000"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:drawableTint="@color/colorBackground"
                    android:layout_toEndOf="@+id/place_name"
                    android:autofillHints=""
                    android:inputType="text" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_relative_layout"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/address"
                    android:id="@+id/address"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_address"
                    android:text="@string/no_address"
                    android:enabled="false"
                    android:layout_toEndOf="@+id/address" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/place_type_relative_layout"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/spinner_name"
                    android:id="@+id/place_type"
                    android:layout_centerVertical="true" />

                <Spinner
                    android:id="@+id/edit_place_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/place_type"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/live_duration_relative_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="gone">

                <TimePicker
                    android:id="@+id/live_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/visibility_relative_layout"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo"
                    android:textColor="#000000"
                    android:id="@+id/visibility"
                    android:layout_centerVertical="true" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/visibility_radio_group"
                    android:layout_toEndOf="@+id/visibility"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/edit_visibility_public"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/pubblico"
                        android:buttonTint="#2196F3"/>

                    <RadioButton
                        android:id="@+id/edit_visibility_private"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/privato" />

                </RadioGroup>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>